Add different <title>s for each page

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -134,6 +134,8 @@
     "removeAnAttorney": "Remove an attorney",
     "doYouWantToRemove": "Are you sure you want to remove {{ .FirstNames }} {{ .LastName }}?",
     "selectRemoveAttorney": "Select whether you want to remove this attorney",
+    "doYouWantToRemovePersonToNotify": "Are you sure you want to remove this person to notify?",
+    "doYouWantToRemoveReplacementAttorney": "Are you sure you want to remove this replacement attorney?",
 
     "whoWouldYouLikeToBeTheAttorneys": "Who would you like to choose as your attorneys?",
     "whoWouldYouLikeToBeTheAttorneysDetailsTitle": "Guidance on choosing an attorney",
@@ -143,6 +145,8 @@
     "emailIncorrectFormat": "Enter email in the correct format, like name@example.com",
     "enterMobile": "Enter mobile phone number",
     "attorneyAddress": "{{.FirstNames}} {{.LastName}}'s address",
+    "attorneyAddressTitle": "Attorney's address",
+    "replacementAttorneyAddressTitle": "Replacement attorney's address",
     "attorneyDateOfBirthIsUnder18": "This attorney is under 18 years old. You will not be able to finish making this LPA until they are 18.",
 
     "wantReplacementAttorneys": "Do you want any replacement attorneys?",
@@ -181,6 +185,7 @@
     "selectWhenCanTheLpaBeUsed": "Select when the LPA can be used",
 
     "restrictionsOnYourAttorneysPower": "Restrict the decisions {{.AllAttorneysFirstNames}} can make",
+    "restrictionsOnYourAttorneysPowerTitle": "Restrict the decisions your attorneys can make",
     "restrictionsOnYourAttorneysPowerContent": "<p class=\"govuk-body\">This optional section lets you add extra information for your attorneys, {{.AllAttorneysFirstNames}}, to guide the decisions they can make on your behalf. We call this adding 'restrictions and conditions' to your LPA.</p> <p class=\"govuk-body\">What you say here will tell {{.AllAttorneysFirstNames}} things they:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>must not do ('restrictions')</li> <li>can only do in certain circumstances ('conditions')</li> </ul> <p class=\"govuk-body\">You do not have to add restrictions or conditions to your LPA. You may prefer to talk to {{.AllAttorneysFirstNames}} about your wishes, rather than writing them into your LPA.</p> <p class=\"govuk-body\">There are legal rules about what you can and cannot tell your attorneys to do, so it's important to read our <a href=\"#\">guidance on writing restrictions and conditions.</a></p>",
     "restrictionExamples": "Show me some examples",
     "restrictionExamplesContent": "<h2 class=\"govuk-heading-s\">Example restrictions: things the attorneys must not do</h2> <ul class=\"govuk-list govuk-list--bullet\"> <li>'My attorneys must not sell my home.'</li> </ul> <h2 class=\"govuk-heading-s\">Example restrictions: things your attorneys can only do in certain circumstances</h2> <ul class=\"govuk-list govuk-list--bullet\"> <li>'My attorneys must not sell my home unless, in my doctor's opinion, I can no longer live independently.'</li> </ul>",
@@ -188,7 +193,8 @@
     "restrictionsHint": "It's important that you word any restrictions and conditions clearly and carefully.",
     "restrictionsTooLong": "Restrictions must be 10,000 or fewer characters",
 
-    "whoDoYouWantToBeCertificateProviderGuidanceIntro": "<h1 class=\"govuk-heading-xl\">Who do you want to be your certificate provider?</h1> <p class=\"govuk-body\">A certificate provider is an independent person who talks to you to check you understand your LPA and want to make it.</p> <p class=\"govuk-body\">Most people choose a friend, neighbour or colleague to be their certificate provider.</p>   ",
+    "whoDoYouWantToBeCertificateProviderGuidanceTitle": "Who do you want to be your certificate provider?",
+    "whoDoYouWantToBeCertificateProviderGuidanceIntro": "<p class=\"govuk-body\">A certificate provider is an independent person who talks to you to check you understand your LPA and want to make it.</p> <p class=\"govuk-body\">Most people choose a friend, neighbour or colleague to be their certificate provider.</p>",
     "whatYourCertificateProviderHasToDo": "<h2 class=\"govuk-heading-m\">What your certificate provider has to do</h2> <p class=\"govuk-body\">Your certificate provider has to:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>read your LPA once you've finished making it</li> <li>meet you in person to talk about your LPA in private</li> <li>witness you signing your LPA</li> </ul> <p class=\"govuk-body\">We’ll then ask your certificate provider to:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>confirm their identity</li> <li>confirm they’ve discussed your LPA with you</li> <li>tell us if they have any concerns about your LPA - for example, if they think someone is pressuring you to make it</li> </ul> <p class=\"govuk-body\">We call this 'providing a certificate'. They can do this using our online service or a paper form.</p> <p class=\"govuk-body\">If we ever have any concerns about your LPA, we may ask your certificate provider to tell us more about the conversation they had with you.</p>",
     "whoToChooseAsYourCertificateProvider": "<h2 class=\"govuk-heading-m\">Who to choose as your certificate provider</h2> <p class=\"govuk-body\">You can choose either:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>someone you’ve known well for at least 2 years, for example, a friend or neighbour (but not a relative)</li> <li>a doctor, lawyer or another professional with the skills to check whether you understand your LPA</li> </ul> <p class=\"govuk-body\">Choose someone:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>you’re comfortable having an open, honest conversation with</li> <li>who will speak up if they think something is wrong</li> </ul> <p class=\"govuk-body\">They’ll need to have their own mobile phone.</p>",
     "whoCannotBeACertificateProvider": "<h2 class=\"govuk-heading-m\">Who cannot be a certificate provider</h2> <p class=\"govuk-body\">Your certificate provider cannot be:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>under 18 years old</li> <li>an attorney on your LPA</li> <li>related to you or {{ .AttorneysFirstNames }} (this includes step-relations, in-laws, husbands, wives, partners, boyfriends and girlfriends)</li> <li>a business partner or employee of you or {{ .AttorneysFirstNames }}</li> <li>someone who works for a care home where you live, or their relative</li> </ul>",
@@ -209,6 +215,7 @@
     "dateOfBirthYear": "Enter a year",
 
     "howWouldCertificateProviderPreferToCarryOutTheirRole": "How would {{.FirstNames}} prefer to carry out their role?",
+    "howWouldCertificateProviderPreferToCarryOutTheirRoleTitle": "How would your certificate provider prefer to carry out their role?",
     "selectHowWouldCertificateProviderPreferToCarryOutTheirRole": "Select how your certificate provider would prefer to carry out their role",
     "selectOneOption": "Select one option",
     "onlineAndByEmail": "Online and by email",
@@ -216,6 +223,7 @@
     "usingPaperForms": "Using paper forms",
     "certificateProvidersEmail": "Certificate provider's email address",
     "certificateProviderAddress": "{{.FirstNames}}'s address",
+    "certificateProviderAddressTitle": "Certificate provider's address",
 
     "aboutPayment": "About payment",
     "aboutPaymentContent": "<p class=\"govuk-body\">It costs £82 to apply for an LPA. </p>",
@@ -227,6 +235,7 @@
     "continueToPayment": "Continue to payment",
 
     "howDoYouKnowYourCertificateProvider": "How do you know {{.FirstNames}} {{.LastName}}, your certificate provider?",
+    "howDoYouKnowYourCertificateProviderTitle": "How do you know your certificate provider?",
     "pleaseDescribe": "Briefly explain how you know {{.FirstNames}} {{.LastName}}",
     "friend": "Friend",
     "neighbour": "Neighbour",
@@ -239,6 +248,7 @@
     "enterDescription": "Enter description",
 
     "howLongHaveYouKnownCertificateProvider": "How long have you known {{.FirstNames}} {{.LastName}}?",
+    "howLongHaveYouKnownCertificateProviderTitle": "How long have you known your certificate provider?",
     "twoYearsOrMore": "2 years or more",
     "lessThanTwoYears": "Less than 2 years",
     "mustHaveKnownCertificateProviderTwoYears": "You must have known your non-professional certificate provider for 2 years or more",
@@ -320,7 +330,7 @@
     "submitSignature": "Submit my signature",
     "selectBothBoxes": "You must select both boxes to sign your LPA",
 
-    "witnessYourSignatureHeader": "<h1 class=\"govuk-heading-xl\">Witnessing your signature</h1>",
+    "witnessYourSignature": "Witnessing your signature",
     "witnessYourSignatureContent": "<p class=\"govuk-body govuk-!-font-weight-bold\">We now need {{ .CpFullName }}, your certificate provider to confirm that they are with you and have witnessed you signing your LPA.</p> <ol class=\"govuk-list govuk-list--number govuk-list--spaced\"> <li>When you press continue, we'll send {{ .CpFirstNames }} a text message containing a unique code</li> <li>{{ .CpFirstNames }} will need to type in this code on the next screen</li> </ol>",
     "witnessCodeTimeWarning": "When {{ .CpFirstNames }} receives this code, it is valid for 30 minutes. Please use the code within this time.",
 
@@ -356,7 +366,7 @@
     "yourIdentityNotConfirmedWithOneLogin": "Your identity details could not be confirmed with GOV.UK One Login",
     "pleaseContinueWithADifferentMethod": "Don't give up, you can (hopefully) continue with a different method.",
 
-    "witnessingAsCPHeader": "<h1 class=\"govuk-heading-xl\">Witnessing as the certificate provider</h1>",
+    "witnessingAsCP": "Witnessing as the certificate provider",
     "enterUniqueCodeLabel": "Enter your unique code",
     "enterUniqueCodeHint": "{{ .CpFirstName }}, please type in the code we have sent you, to prove that you are with {{ .DonorFullName }} and have witnessed them sign their LPA.",
     "cpNotReceivedCodeLink": "<p class=\"govuk-body\"><a href=\"#\" class=\"govuk-link\">{{ .CpFirstName }} has not received a text message with the code</a></p>",
@@ -366,8 +376,8 @@
     "witnessCodeTooLong": "The code you entered is too long",
     "witnessCodeTooShort": "The code you entered is too short",
 
-    "submittedLpaHeader": "<h1 class=\"govuk-panel__title\">You've submitted your LPA</h1>",
-    "whatHappensNextSubHeader": "<h2 class=\"govuk-heading-m\">What happens next</h2>",
+    "submittedYourLpa": "You've submitted your LPA",
+    "whatHappensNext": "What happens next",
     "nextStepsList": "<ol class=\"govuk-list govuk-list--number govuk-list--spaced\"><li>We'll contact {{ .CpFirstNames }} and ask them to confirm their identity. They also need to sign your LPA to confirm they've discussed it with you. We call this 'providing a certificate'.</li><li>We'll then contact {{ .AttorneysFullNames }} and ask them to sign your LPA as your attorneys.</li><li>Once the attorneys have signed, your LPA will automatically be sent to us to be checked and registered. If we find any problems with your LPA, we'll contact you.</li><li>The law says we then have to wait 4 weeks before registering your LPA. This is in case anyone wants to object to your LPA's registration.</li><li>We'll register your LPA.</li></ol>",
     "weWillEmailYou": "<p class=\"govuk-body\">We'll email you at each step to update you with the progress of your LPA's registration. You can also track progress by logging into this service.</p>",
     "signIn4WeeksWarning": "{{ .CpFirstNames }} and your attorneys must sign your LPA by {{ .AttorneysAndCpSigningDeadline }}. If they do not sign by this date, you will have to meet with {{ .CpFirstNames }} and sign your LPA again.",
@@ -443,6 +453,7 @@
     "findOutMoreAboutPeopleToNotifyLink": "<p class=\"govuk-body\"><a href=\"#\" class=\"govuk-link\">Find out more about people to notify (opens in a new tab).</a></p>",
     "whoWouldYouLikeNotify": "Add a person to notify about your LPA",
     "personToNotifyAddress": "{{.FirstNames}} {{.LastName}}'s address",
+    "personToNotifyAddressTitle": "Person to notify's address",
     "weCanNotifyUpTo5PeopleContent": "<p class=\"govuk-body\">We can notify up to 5 people about your LPA on your behalf.</p>",
     "removePersonToNotifyButtonLink": "Remove {{ .FirstNames }} {{ .LastName }}",
     "doYouWantToAddAnotherPersonToNotify": "Do you want to add another person to notify?",
