--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -447,10 +447,16 @@
     "wantPeopleToNotify": "Do you want to notify anyone about your LPA?",
     "selectDoYouWantToNotifyPeople": "Select whether you want to notify anyone about your LPA",
     "wantPeopleToNotifyContent": "<p class=\"govuk-body\">You can choose to notify up to 5 people about your LPA. Most people choose family members or close friends. These people can raise any concerns before your LPA is registered.</p><p class=\"govuk-body\">We call these 'people to notify'. Having people to notify is optional.</p><p class=\"govuk-body\">If you choose to notify a person about your LPA, we'll send them information as soon as we have received and checked your application.</p>",
-    "weWillOnlyTellThemBullets": "<p class=\"govuk-body\">We'll only tell them:</p><ul class=\"govuk-list govuk-list--bullet\"><li>that you’ve made a {{ .LpaType }} LPA</li><li>that your attorneys are {{ .AllAttorneysFirstNames }}</li><li>{{ .HowAttorneysWorkTogether }}</li><li>what to do if they have concerns</li></ul>",
+    "weWillOnlyTellThem": "We’ll only tell them:",
+    "thatYouHaveMadeALpaType": "that you’ve made a {{ .LpaType }} LPA",
+    "thatYourAttorneysAre": {
+        "one": "that your attorney is {{.AllAttorneysFirstNames }}",
+        "other": "that your attorneys are {{.AllAttorneysFirstNames }}"
+    },
     "jointlyDescription": "that you want your attorneys to work together to make decisions",
     "jointlyAndSeverallyDescription": "that you want your attorneys to work together or separately to make decisions",
     "jointlyForSomeSeverallyForOthersDescription": "that you want your attorneys to work together on some decisions but can make other decisions separately",
+    "whatToDoIfYouHaveConcerns": "what to do if they have concerns",
     "findOutMoreAboutPeopleToNotifyLink": "<p class=\"govuk-body\"><a href=\"#\" class=\"govuk-link\">Find out more about people to notify (opens in a new tab).</a></p>",
     "whoWouldYouLikeNotify": "Add a person to notify about your LPA",
     "personToNotifyAddress": "{{.FirstNames}} {{.LastName}}'s address",
