fix spelling mistakes in Welsh spotted by Nia

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -73,9 +73,9 @@
     "enterAddress": "Rhowch gyfeiriad",
     "enterTownOrCity": "Rhowch dref neu ddinas",
     "couldNotLookupPostcode": "Methu chwilio’r cod post",
-    "addressLine1TooLong": "Newid llinell cyfeiriad 1 fel bod llai na 51 gymeriad",
-    "addressLine2TooLong": "Newid llinell cyfeiriad 2 fel bod llai na 51 gymeriad",
-    "addressLine3TooLong": "Newid llinell cyfeiriad 3 fel bod llai na 51 gymeriad",
+    "addressLine1TooLong": "Newid llinell cyfeiriad 1 fel bod llai na 51 o gymeriadau",
+    "addressLine2TooLong": "Newid llinell cyfeiriad 2 fel bod llai na 51 o gymeriadau",
+    "addressLine3TooLong": "Newid llinell cyfeiriad 3 fel bod llai na 51 o gymeriadau",
 
     "whoIsThisLpaFor": "Ar gyfer pwy mae’r LPA hwn?",
     "forMe": "I mi",
@@ -277,7 +277,7 @@
     "selectCheckedLpa": "Dewiswch eich bod wedi gwirio eich LPA ac nad ydych am wneud newidiadau",
     "selectHappyToShareLpa": "Dewiswch eich bod yn hapus i rannu eich LPA gyda’ch darparwr tystysgrif",
     "checkYourLpa": "Gwiriwch eich LPA",
-    "youveNowFinishedFillingInTheLpa": "ych wedi gorffen llenwi’r LPA. Cyn i chi barhau, gwiriwch yr holl atebion yn ofalus.",
+    "youveNowFinishedFillingInTheLpa": "Rydych wedi gorffen llenwi’r LPA. Cyn i chi barhau, gwiriwch yr holl atebion yn ofalus.",
     "idVerifiedTag": "ID wedi gwirio",
     "lpaDecisions": "Penderfyniadau LPA",
     "typeOfLpa": "Math o LPA",
