stray straight apostrophe

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -446,7 +446,7 @@
     "peopleToNotify": "People to notify about your LPA",
     "wantPeopleToNotify": "Do you want to notify anyone about your LPA?",
     "selectDoYouWantToNotifyPeople": "Select whether you want to notify anyone about your LPA",
-    "wantPeopleToNotifyContent": "<p class=\"govuk-body\">You can choose to notify up to 5 people about your LPA. Most people choose family members or close friends. These people can raise any concerns before your LPA is registered.</p><p class=\"govuk-body\">We call these ‘people to notify’. Having people to notify is optional.</p><p class=\"govuk-body\">If you choose to notify a person about your LPA, we'll send them information as soon as we have received and checked your application.</p>",
+    "wantPeopleToNotifyContent": "<p class=\"govuk-body\">You can choose to notify up to 5 people about your LPA. Most people choose family members or close friends. These people can raise any concerns before your LPA is registered.</p><p class=\"govuk-body\">We call these ‘people to notify’. Having people to notify is optional.</p><p class=\"govuk-body\">If you choose to notify a person about your LPA, we’ll send them information as soon as we have received and checked your application.</p>",
     "weWillOnlyTellThem": "We’ll only tell them:",
     "thatYouHaveMadeALpaType": "that you’ve made a {{ .LpaType }} LPA",
     "thatYourAttorneysAre": {
