--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -60,8 +60,8 @@
     "postcode": "Cod post",
     "findAddress": "Dod o hyd i gyfeiriad",
     "selectAnAddress": "Dewiswch gyfeiriad",
-    "cantFindAddress": "Methu dod o hyd i’r cyfeiriad?",
-    "cantFindTheirAddress": "Welsh",
+    "cantFindMyAddressInList": "Welsh",
+    "cantFindTheirAddressInList": "Welsh",
     "addressesFound": {
         "one": "Daethpwyd o hyd i {{.PluralCount}} cyfeiriad",
         "two": "Daethpwyd o hyd i {{.PluralCount}} o gyfeiriadau",
@@ -77,6 +77,8 @@
     "townOrCity": "Tref neu ddinas",
     "couldNotLookupPostcode": "Methu chwilio’r cod post",
     "invalidPostcode": "welsh",
+    "aPostcode": "welsh",
+    "anAddressFromTheList": "welsh",
 
     "whoIsThisLpaFor": "Ar gyfer pwy mae’r LPA hwn?",
     "whoTheLpaIsFor": "Welsh",
