allow manual postcode entry on invalid postcode, update wording

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -56,9 +56,10 @@
     "errorSelect": "Welsh {{.Label}}",
     "errorEmail": "{{.Label}} Welsh",
 
-    "homeAddress": "Cyfeiriad cartref",
+    "whatIsYourAddress": "Welsh?",
     "postcode": "Cod post",
     "findAddress": "Dod o hyd i gyfeiriad",
+    "enterAddressManually": "Welsh",
     "selectAnAddress": "Dewiswch gyfeiriad",
     "cantFindMyAddressInList": "Welsh",
     "cantFindTheirAddressInList": "Welsh",
