--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -171,7 +171,7 @@
     "replacementAttorneys": "Atwrneiod wrth gefn",
     "replacementAttorney": "Welsh",
 
-    "whenCanTheLpaBeUsed": "Pryd gall eich atwrneiod ddefnyddio eich LPA",
+    "whenCanYourAttorneysUseYourLpa": "Pryd gall eich atwrneiod ddefnyddio eich LPA",
     "youCanDecideHeader": "<p class=\"govuk-body-l\">Gallwch benderfynu os gall eich atwrnai ddefnyddio’r LPA cyn gynted ag y bydd wedi’i chofrestru neu dim ond pe bai chi’n colli galluedd meddyliol.</p>",
     "asSoonAsRegisteredTitle": "<h2 class=\"govuk-heading-m\">Cyn gynted ag y bydd yr LPA wedi’i chofrestru</h2>",
     "asSoonAsRegisteredIntro": {
@@ -269,7 +269,7 @@
     "idVerifiedTag": "ID wedi gwirio",
     "lpaDecisions": "Penderfyniadau LPA",
     "typeOfLpa": "Math o LPA",
-    "whenTheLpaCanBeUsed": "pryd gall eich atwrneiod ddefnyddio eich LPA",
+    "whenYourAttorneysCanUseYourLpa": "welsh",
     "whoAreTheAttorneys": {
         "one": "Pwy yw eich atwrnai",
         "two": "Pwy yw eich atwrneiod",
